<resources>
    <string name="app_name">HopInNow</string>
    <string name="prompt_username">Name: </string>
    <string name="vehicle_info_header">Vehicle Info</string>
    <string name="menu_header">Menu</string>
    <string name="vehicle_make_hint">Make:</string>
    <string name="vehicle_model_hint">Model:</string>
    <string name="vehicle_color_hint">Color:</string>
    <string name="vehicle_platenum_hint">Plate Number:</string>
    <string name="vehicle_finish_register_btn">finish</string>
    <string name="title_activity_login">Sign in</string>
    <string name="profile_header">Profile</string>
    <string name="profile_edit_btn">Edit Profile</string>
    <string name="profile_update_btn">Update Profile</string>
    <string name="profile_userType_txt">User Type: </string>
    <string name="profile_logout_btn">Log out</string>
    <string name="prompt_email">Email: </string>
    <string name="prompt_password">Password: </string>
    <string name="prompt_re_password">Re-enter Password: </string>
    <string name="prompt_diff_password">Passwords do not match!</string>
    <string name="is_driver_txt">I\'m a Driver</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_phone_number">Phone number: </string>
    <string name="prompt_register">Register</string>
    <string name="register_title">Create an account</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="sample_text">Sample Text</string>
    <string name="loading_prompt">Loading\.\.\.</string>
    <string name="promp_deposit_txt">Deposit: </string>
    <string name="dollar_sign">$</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_warning">Please fill in both text fields</string>
    <string name="login_failed">"Login failed"</string>
    <string name="From">"From:"</string>
    <string name="To">"To:"</string>
    <string name="Date">"Date:"</string>

    <string name="usertype_driver">Driver</string>
    <string name="usertype_rider">Rider</string>
    <string name="fair">Estimate Fair:</string>
    <string name="request_info_to">To:</string>
    <string name="request_info_from">From:</string>
    <string name="request_time">Time:</string>
    <string name="request_info_title">Request Information</string>
    <string name="pick_up_rider_button_text">Picked Up Rider</string>
    <string name="drop_off_rider_button_text">Trip Finished</string>
    <string name="emergency_call_button_text">EMERGENCY CALL</string>
    <string name="rate_trip_title_text">Please rate on this trip</string>
    <string name="single_request_in_request_list_from">From:</string>
    <string name="single_request_in_request_list_to">To:</string>
    <string name="Request_list_each_accept_button">ACCEPT</string>

    <string name="title_activity_first_page">firstPageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="empty_hint">Currently empty</string>
    <string name="trip_history_header">Trip History</string>
</resources>
