<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorWhite">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ColorWhite"
        tools:context=".activities.RegisterActivity">

        <EditText
            android:id="@+id/reRegPassword2"
            android:layout_width="335sp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/prompt_re_password"
            android:inputType="textPassword"
            android:textColor="@color/ColorBlack"
            android:theme="@style/EditTextHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regPassword" />

        <EditText
            android:id="@+id/regNameEditText"
            android:layout_width="335sp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/prompt_username"
            android:inputType="textPersonName"
            android:textColor="@color/ColorBlack"
            android:theme="@style/EditTextHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regHeader" />

        <EditText
            android:id="@+id/regPhoneNum"
            android:layout_width="335sp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/prompt_phone_number"
            android:inputType="phone"
            android:textColor="@color/ColorBlack"
            android:theme="@style/EditTextHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regEmailEditText" />

        <TextView
            android:id="@+id/passdiffwarn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="12dp"
            android:text="@string/prompt_diff_password"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reRegPassword2" />

        <Switch
            android:id="@+id/driver_rider_switch"
            android:layout_width="179dp"
            android:layout_height="39dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="24dp"
            android:text="@string/is_driver_txt"
            android:textColor="@color/ColorOrange"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passdiffwarn" />

        <Button
            android:id="@+id/regButton"
            android:layout_width="240dp"
            android:layout_height="56dp"
            android:layout_marginStart="84dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/orange_all_round_corner_login"
            android:text="@string/prompt_register"
            android:textColor="@color/ColorOrange"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driver_rider_switch" />

        <EditText
            android:id="@+id/regPassword"
            android:layout_width="335sp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColor="@color/ColorBlack"
            android:theme="@style/EditTextHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regPhoneNum" />

        <TextView
            android:id="@+id/regHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:text="@string/register_title"
            android:textColor="@color/ColorOrange"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/regEmailEditText"
            android:layout_width="335sp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/ColorBlack"
            android:theme="@style/EditTextHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regNameEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>