<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDark"
        tools:context=".LoginActivity">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="160dp"
            android:text="@string/app_name"
            android:textColor="@color/ColorOrange"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/regEmailEditText"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/ColorWhite"
            android:theme="@style/EditTextHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginText" />

        <EditText
            android:id="@+id/regPassword"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColor="@color/ColorWhite"
            android:theme="@style/EditTextHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regEmailEditText" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="240dp"
            android:layout_height="64dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="56dp"
            android:background="@color/quantum_googyellow"
            android:onClick="login"
            android:text="@string/prompt_login"
            android:textColor="@color/colorDark"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regPassword" />

        <TextView
            android:id="@+id/linkToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="147dp"
            android:layout_marginTop="40dp"
            android:onClick="toRegister"
            android:text="@string/prompt_register"
            android:textColor="@android:color/darker_gray"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <TextView
            android:id="@+id/loginWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="20dp"
            android:text="@string/login_warning"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>