<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vehicleInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDark"
        tools:context=".activities.RegisterVehicleInfoActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="60dp"
            android:text="@string/vehicle_info_header"
            android:textColor="@color/ColorOrange"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/vehMakeEt"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/vehicle_make_hint"
            android:inputType="textPersonName"
            android:textColor="@color/ColorWhite"
            android:theme="@style/EditTextHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/vehModelEt"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/vehicle_model_hint"
            android:inputType="textPersonName"
            android:textColor="@color/ColorWhite"
            android:theme="@style/EditTextHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehMakeEt" />

        <EditText
            android:id="@+id/vehColorEt"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/vehicle_color_hint"
            android:inputType="textPersonName"
            android:textColor="@color/ColorWhite"
            android:theme="@style/EditTextHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehModelEt" />

        <EditText
            android:id="@+id/vehPlateEt"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/vehicle_platenum_hint"
            android:inputType="textPersonName"
            android:textColor="@color/ColorWhite"
            android:theme="@style/EditTextHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehColorEt" />

        <View
            android:id="@+id/divider4"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehPlateEt" />

        <Button
            android:id="@+id/vehicleToFinishBtn"
            android:layout_width="240dp"
            android:layout_height="56dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:background="@color/ColorOrange"
            android:text="@string/vehicle_finish_register_btn"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>