<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vehicleInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDark"
        tools:context=".activities.RegisterVehicleInfoActivity">

        <TextView
            android:id="@+id/vehicleInfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="60dp"
            android:text="@string/vehicle_info_header"
            android:textColor="@color/ColorOrange"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/vehicleMakeEditText"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/vehicle_make_hint"
            android:inputType="textPersonName"
            android:textColor="@color/ColorWhite"
            android:theme="@style/EditTextHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleInfoTextView" />

        <EditText
            android:id="@+id/vehicleModelEditText"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/vehicle_model_hint"
            android:inputType="textPersonName"
            android:textColor="@color/ColorWhite"
            android:theme="@style/EditTextHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleMakeEditText" />

        <EditText
            android:id="@+id/vehicleColorEditText"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/vehicle_color_hint"
            android:inputType="textPersonName"
            android:textColor="@color/ColorWhite"
            android:theme="@style/EditTextHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleModelEditText" />

        <EditText
            android:id="@+id/vehiclePlateEditText"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/vehicle_platenum_hint"
            android:inputType="textPersonName"
            android:textColor="@color/ColorWhite"
            android:theme="@style/EditTextHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleColorEditText" />

        <View
            android:id="@+id/vehicleDivider4"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehiclePlateEditText" />

        <Button
            android:id="@+id/vehicleUpdateBtn"
            android:layout_width="240dp"
            android:layout_height="56dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:background="@color/ColorOrange"
            android:text="Update"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleDivider4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>